move canvas size from css to inline to fix blurry render bug

--- a/client/src/Components/stylesheets/sortcanvas.css
+++ b/client/src/Components/stylesheets/sortcanvas.css
@@ -1,5 +1,3 @@
 #sort-canvas {
-    border:1px solid #000000;
-    width: 1000;
-    height: 500;
+    border:5px solid #000000;
 }
